improved services and scripts

--- a/config.ini
+++ b/config.ini
@@ -17,8 +17,10 @@ system_monitoring = true
 
 [services]
 list =
-    xpra-java.service
+    tile-wjtag
+    xpra-vivado
+    xpra-fpexpress
     service_panel
     sshd
     nginx
-
+    
